# profgrep

./: .gitignore  .gitingore  meson.build  profgrep
inc/profgrep/: buffer.h  dictionary.h  profgrep.h  search.h
src/: buffer.c  censor.c  dictionary.c  printfv.c  profgrep.c  readln.c  search.c
tst/: biglist.sh  bytes.sh  censor.sh  comments  dictionary  green-eggs-and-ham.txt  meson.build
